# intro-to-prefect

./: README.md  docker-compose.yaml  pyproject.toml
database/init/: init.sql
src/pipeline/: main.py
src/test/: tasks.py
